--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
-        "lucide-react": "^0.552.0"
+        "lucide-react": "^0.552.0",
+        "quill": "^2.0.3",
+        "react-quill": "^2.0.0",
+        "sweetalert2": "^11.26.3"
     }
 }
