--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "dependencies": {
         "lucide-react": "^0.552.0",
         "quill": "^2.0.3",
+        "react-markdown": "^10.1.0",
         "react-quill": "^2.0.0",
+        "remark-gfm": "^4.0.1",
         "sweetalert2": "^11.26.3"
     }
 }
